--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jose": "^6.1.3",
     "next": "16.0.7",
     "qrcode": "^1.5.4",
+    "qrcode.react": "^4.2.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "viem": "^2.41.2"
