--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "qrcode.react": "^4.2.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-icons": "^5.5.0",
     "viem": "^2.41.2"
   },
   "devDependencies": {
